<resources>
    <string name="app_name">Showcollectdata</string>
    <string name="login_username_hint">用户名</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="forget_passwd"><u>忘记密码</u></string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="loading">正在登录...</string>
    <string name="name_is_not_empty">用户名不能为空！</string>
    <string name="password_is_not_empty">密码不能为空！</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="get_netdata_failed">获取数据失败!</string>
    <string name="network_failed">当前网络未连接，请检查网络状况！</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗？</string>
    <string name="soft_update_updatebtn">现在更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="get_update_netdata_failed">获取升级数据失败!</string>
    <string name="newpwd_cannot_be_empty">请输入新密码</string>
    <string name="newpwd_is_not_equal">两次输入的新密码不一致</string>
    <string name="get_vertify_num_failed">获取验证码错误</string>
    <string name="vertify_num_failed">验证码错误</string>
    <string name="vertify_num_success">验证码正确</string>
    <string name="vertify_num_is_empty">验证码为空</string>
    <string name="get_vertify_num">获取验证码</string>
    <string name="vertify_time">倒计时</string>
    <string name="modify_pwd_success">修改密码成功,请重新登录！</string>
    <string name="modify_pwd_failed">修改密码失败</string>
    <string name="register_failed">注册失败</string>
    <string name="register_success">注册成功,待审核</string>
    <string name="finduser_success">找回成功,待审核</string>
    <string name="bottom_text">绿盛物联 版权所有</string>
    <string name="firsttitile">太阳能污水处理系统</string>
    <string name="firsttitile1">智能运维系统</string>
    <string name="projectname">项目名称</string>
    <string name="projecttetail">项目信息</string>
    <string name="projectstatus">运行状态</string>
    <string name="projectdata">运行数据</string>
    <string name="projectadd">项目添加</string>
    <string name="projectinfomodify">项目信息修改</string>
    <string name="engineerinfomodify">设备信息修改</string>
    <string name="workermodify">维护人员更改</string>
    <string name="registerinfo">注册信息审核</string>
    <string name="findinfo">找回信息审核</string>
    <string name="registerfindinfo">注册找回审核</string>
    <string name="notifyinfo">故障报警</string>
    <string name="devicesinfo">设备信息</string>
    <string name="urgentstopandstart">紧急启停</string>
    <string name="timingrunlist">定时运行</string>
    <string name="commit">提交配置</string>
    <string name="commitmodify">确认修改</string>
    <string name="commitdelect">确认删除</string>
    <string name="projectaddsuccess">项目添加成功</string>
    <string name="auditingregisterinfo">注册信息:</string>
    <string name="auditingfindaccountinfo">账号找回信息:</string>
    <string name="auditingpass">审核通过</string>
    <string name="auditingreject">审核驳回</string>
    <string name="infoback">返 回</string>


</resources>
