<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color">
    <ImageView
        android:id="@+id/iv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_companypic" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_height="490dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_below="@id/iv_company"
        android:orientation="vertical"
        android:layout_width="300dp">
        <!-- 账号 -->
        <EditText
            android:id="@+id/username_edit"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="6dp"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:singleLine="true"
            android:background="@drawable/editbg"/>
        <!-- 密码 text -->
        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_passwd"
            android:drawablePadding="6dp"
            android:hint="@string/login_label_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:background="@drawable/editbg"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <CheckBox
                android:id="@+id/cb_mima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="记住密码"
                android:textSize="20dp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/cb_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="自动登录"
                android:textSize="20dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/black" />
        </RelativeLayout>
        <!-- 登录button -->
        <Button
            android:id="@+id/signin_button"
            style="@style/normalText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/password_edit"
            android:layout_below="@id/cb_mima"
            android:layout_marginTop="30dip"
            android:background="@drawable/shape_button_round"
            android:text="@string/login_label_signin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register_text"
                style="@style/linkText"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dip"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="用户注册" />

            <TextView
                android:id="@+id/forget_passwd_text"
                style="@style/linkText"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dip"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="用户找回" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:background="@drawable/bottom"
        android:textSize="18dp"
        android:textColor="@color/inputtext_color"
        android:gravity="center"
        android:text="@string/bottom_text" />
</RelativeLayout>
