<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/inline_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_companypic2"
        />
    <RelativeLayout
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:background="@color/text_color_blue"
        >

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_bak" />
        <TextView
            android:id="@+id/envirmentsecondtitle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/firsttitile"
            android:textColor="@color/white"
            android:textSize="@dimen/bigfont"
            android:layout_centerInParent="true"
            />

        <ImageView
            android:id="@+id/envirmentmenubutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/imageButton"
            android:src="@drawable/arrow_menu" />
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/total_width"
        android:layout_height="@dimen/total_height"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/common_space2"
        android:background="@color/backgroud_color"
        >
        <TextView
            android:id="@+id/project_firsttextview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/secondimage_height"
            android:text="@string/projectname"
            android:textSize="@dimen/commonfont"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/text_color_blue"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
        <TextView
            android:id="@+id/project_secondtextview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/thirdimage_height"
            android:text="@string/projecttetail"
            android:textSize="@dimen/commonfont"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/input_color"
            />
        <fragment
            android:id="@+id/idfragment"
            android:name="com.lszyhb.showcollectdata.Enproinfomenufragment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
        />
    </LinearLayout>
    <com.lszyhb.showcollectdata.BottomHorizontalScrollView
        android:id="@+id/id_horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/secondimage_height"
        android:layout_marginTop="@dimen/common_space2"
        android:scrollbars="none" >
        <LinearLayout
            android:id="@+id/horizonlinearlayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/secondimage_height"
            >
        </LinearLayout>
    </com.lszyhb.showcollectdata.BottomHorizontalScrollView>
</LinearLayout>
